login complete..for now

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <form>
     <input type="password" name="name" value="password">
 </form>
+
       </div>
+
+    <div class"button">
+        <button class="button">Login</button>
+    </div>
 
       <div class="forgot">
       </div>
